chore(eai): rm value property (#1526)